@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-06-15T01:11:29Z",
-  "count_outdated" : 106,
-  "uniques_outdated" : 70,
-  "count" : 107,
-  "uniques" : 71,
+  "timestamp" : "2022-07-01T16:20:29Z",
+  "count_outdated" : 107,
+  "uniques_outdated" : 71,
+  "count" : 108,
+  "uniques" : 72,
   "clones" : [
     {
-      "timestamp": "2022-06-14T00:00:00Z",
+      "timestamp": "2022-07-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
